@@ -1,4 +1,9 @@
 2004-05-30  Markus Germeier  <mager@tzi.de>
+	* added Roberts MMC code (step 1)
+	* fixed a FAT bug he found on the way
+	* Thanks and kudos to Robert!
+
+2004-05-30  Markus Germeier  <mager@tzi.de>
 	* changed version to 0.7.1-pre2
 
 2004-04-24  Markus Germeier  <mager@tzi.de>
